--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="assets/image.webp" type="image/x-icon">
 		<link
 			href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
 			rel="stylesheet"
